--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "css-loader": "^7.1.2",
     "electron": "^36.5.0",
     "electron-builder": "^26.0.12",
+    "electron-rebuild": "^3.2.9",
     "electron-reload": "^2.0.0-alpha.1",
     "html-webpack-plugin": "^5.6.3",
     "os-browserify": "^0.3.0",
@@ -64,8 +65,8 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "better-sqlite3": "^12.2.0",
     "loudness": "^0.4.2",
-    "lowdb": "^7.0.1",
     "lucide-react": "^0.522.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
